# promptimal

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
o100/: __main__.py  app.py
o100/dtos/: ProgressStep.py  TokenCount.py  __init__.py
o100/optimizer/: __init__.py  main.py  prompts.py  utils.py
promptimal/: __main__.py  app.py  promptimal.py
promptimal/dtos/: ProgressStep.py  PromptCandidate.py  __init__.py
promptimal/optimizer/: __init__.py  main.py  prompts.py  utils.py
